--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-    "name": "darcula-pycharm",
-    "displayName": "Darcula PyCharm Theme",
-    "description": "PyCharm's Darcula syntax theme ported with care to VS Code",
-    "version": "1.0.0",
+    "name": "darcula-from-pycharm",
+    "displayName": "Darcula Theme from PyCharm",
+    "description": "Fork of Darcula PyCharm Theme with several fixes and support for semantic highlighting",
+    "version": "0.1.0",
     "license": "MIT",
-    "publisher": "garytyler",
+    "publisher": "Bobronium",
     "preview": false,
-    "extensionDependencies": [
-        "magicstack.magicpython"
-    ],
-    "repository": "https://github.com/garytyler/vscode-darcula-pycharm-theme",
+    "repository": "https://github.com/Bobronium/vscode-pycharm-darcula-theme",
     "icon": "images/icon.png",
     "engines": {
         "vscode": "^1.21.0"
@@ -19,27 +16,43 @@
     ],
     "keywords": [
         "darcula",
+        "darkula",
+        "dracula",
+        "drakula",
         "pycharm",
         "IntelliJ",
+        "IDEA",
+        "regex",
+        "re",
+        "semantic",
+        "highlighting",
         "django",
-        "python"
+        "jinja",
+        "template",
+        "python",
+        "dr",
+        "dra",
+        "drac",
+        "drak",
+        "dracu",
+        "draku",
+        "drakul",
+        "dracul",
+        "da",
+        "dar",
+        "darc",
+        "dark",
+        "darcu",
+        "darku",
+        "darcul",
+        "darkul"
     ],
     "contributes": {
         "themes": [{
-                "label": "Darcula Pycharm with Dark GUI",
+                "label": "Darcula from Pycharm (Dark)",
                 "uiTheme": "vs-dark",
                 "path": "./themes/darcula-pycharm-dark-gui-color-theme.json"
-            },
-            {
-                "label": "Darcula Pycharm with Light GUI",
-                "uiTheme": "vs-dark",
-                "path": "./themes/darcula-pycharm-light-gui-color-theme.json"
             }
         ]
-    },
-    "__metadata": {
-        "id": "f4d7cb0b-ba14-42cd-aef4-cc006556fbb3",
-        "publisherDisplayName": "garytyler",
-        "publisherId": "d5a91575-5edb-4e0b-828d-3d1427131779"
     }
 }
