Update keywords (tags)

--- a/package.json
+++ b/package.json
@@ -30,22 +30,17 @@
         "jinja",
         "template",
         "python",
-        "dr",
-        "dra",
-        "drac",
-        "drak",
-        "dracu",
-        "draku",
-        "drakul",
-        "dracul",
-        "da",
-        "dar",
-        "darc",
-        "dark",
-        "darcu",
-        "darku",
-        "darcul",
-        "darkul"
+        "3.10",
+        "syntax",
+        "match",
+        "case",
+        "semantic",
+        "highlighting",
+        "pattern",
+        "matching",
+        "errors",
+        "problems",
+        "linting"
     ],
     "contributes": {
         "themes": [{
